--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ ul {
 /* Project Area */
 
 .site-main .project-area {
-  padding: 4rem 0;
+  padding: 5rem 0;
 }
 
 .site-main .project-area .button-group button {
@@ -442,6 +442,10 @@ ul {
 /* End Project Area */
 
 /* About Me */
+
+.site-main .about-area {
+  padding-top: 2rem !important;
+}
 
 .site-main .about-area .about-title p {
   padding: 1rem 7rem;
